# smpc

./: readme.md
smpc-simple/: Cargo.toml
smpc-simple/src/: main.rs
smpc-websocket/: Cargo.toml
smpc-websocket/shared/: Cargo.toml
smpc-websocket/shared/src/: types.rs  utils.rs
smpc-websocket/smpc-client/: Cargo.toml
smpc-websocket/smpc-client/src/: main.rs
smpc-websocket/smpc-client/src/actor/: client_actor.rs  client_message.rs  consts.rs  mod.rs
smpc-websocket/smpc-client/src/handlers/: connect_server.rs  mod.rs  websocket.rs
smpc-websocket/smpc-server/: Cargo.toml
smpc-websocket/smpc-server/src/: main.rs  test.rs
smpc-websocket/smpc-server/src/actor/: mod.rs  server_actor.rs  server_message.rs
smpc-websocket/smpc-server/src/errors/: error_close.rs  mod.rs  server_error.rs  websocket_error.rs
smpc-websocket/smpc-server/src/handlers/: connect_websocket.rs  mod.rs
