[package]
name = "smpc-server"
version = "0.1.0"
edition = "2024"
authors = ["Kushal Pokharel kupokh@iu.edu"]

[dependencies]
actix = "0.13.5"
actix-codec = "0.5.2"
actix-http = "3.11.0"
actix-web = "4.11.0"
anyhow = "1.0.98"
awc = "3.7.0"
curv-kzen = "0.10.0"
futures = "0.3.31"
kzen-paillier = "0.4.3"
serde = "1.0.219"
serde_json = "1.0.142"
shared = { version = "0.1.0", path = "../shared" }
